src/styles/Team.css
.team {
  text-align: center;
  padding: 60px 0;
}

.team h2 {
  font-size: 42px;
  margin-bottom: 10px;
}

.team p {
  color: #6b7280;
  margin-bottom: 40px;
}

/* CARROSSEL */
.carousel {
  overflow: hidden;
  width: 95%;
}

.carousel-track {
  display: flex;
  gap: 20px;
  width: max-content;

  animation: scroll 50s linear infinite;
}

/* animação automática */
@keyframes scroll {
  0% {
    transform: translateX(0);
  }
  100% {
    transform: translateX(-50%);
  }
}

/* pausa no hover */
.carousel:hover .carousel-track {
  animation-play-state: paused;
}

/* CARD */
.team-card {
  min-width: 200px;
  height: 260px;
  border-radius: 20px;
  padding: 20px;
  display: flex;
  align-items: flex-end;
  cursor: pointer;
  transition: 0.3s;
}

.team-card:hover {
  transform: translateY(-10px);
}

.card-content {
  width: 100%;
  text-align: center;
}

.avatar {
  width: 60px;
  height: 60px;
  background: #1f2937;
  border-radius: 50%;
  margin: 0 auto 15px;
}

.info h3 {
  margin: 0;
  font-size: 18px;
}

.info span {
  font-size: 14px;
  color: #374151;
}

